# LearningOpenGL

./: CMakeLists.txt
.cache/clangd/index/: callbacks.cpp.BA4C888254BEA20A.idx  callbacks.hpp.813AC0D0D85D1FDC.idx  camera.cpp.F1AA5C752DE4F6EB.idx  camera.hpp.22047616550DBE4E.idx  camera_controls.cpp.6E7B8E9EFCFBC030.idx  constants.cpp.97A8F01D20FBE25F.idx  constants.hpp.12D1B151F2BBF519.idx  engine.hpp.F05BC9CC1FF5321E.idx  engine_controls.cpp.5BDA6FD91D151879.idx  engine_controls.hpp.9F46CE6F54CE364F.idx  engine_init.cpp.14F05C75EBCE8C94.idx  engine_models.cpp.DAD45A174128BFA4.idx  engine_render.cpp.B608F8DB8CBE258C.idx  engine_run.cpp.99FF8590FEBD64C1.idx  engine_scene.cpp.CBCE32A54E9E8521.idx  factory.cpp.3BA821C25D002339.idx  factory.hpp.04A2497CBE364471.idx  files.cpp.F802858E8D0C0DAB.idx  files.hpp.5A494CE258A8BB4C.idx  glad.c.CE20834E207214B7.idx  glad.h.84A78311E61DC2DF.idx  init.cpp.395B600282B15424.idx  init.hpp.4750232E849D6D0B.idx  main.cpp.7D0D8FBFA50971C5.idx  mat4.cpp.F39240BE380B8278.idx  mat4.hpp.73479F7C393D8398.idx  parser.cpp.217A6BD263950BF0.idx  parser.hpp.B15370CC9121ECA5.idx  shader.cpp.951553DB41A93B40.idx  shaderManager.cpp.2213D3C3319E97D9.idx  shaderManager.hpp.48BE06A95A2DD4E0.idx  transform.cpp.E3818BB19BB4514D.idx  transform.hpp.F99F7E48DB4CCC7A.idx  vaoManager.cpp.E8EF1EBEA701055B.idx  vaoManager.hpp.A0D59EF77AAB05A0.idx  vec2.cpp.89BB030B3AA76012.idx  vec2.hpp.865BEB035C5FDD6B.idx  vec3.cpp.4FC6DF6E1B6427D9.idx  vec3.hpp.F56EC6F2A1FC506F.idx  vec4.cpp.356953E80DC67DE1.idx  (+3 more)
Assets/Shaders/: vertex_shader.glsl
assets/scenes/: Cube.txt  Cube_orig.txt  Default.txt  Square_orig.txt  Teacher.txt  Teacher_orig.txt  Triangle_orig.txt  Warehouse.txt  Warehouse_orig.txt
assets/shaders/: fragment_shader.glsl
inc/Core/: Constants.hpp  Mat4.hpp  Transform.hpp  Vec2.hpp  Vec3.hpp  Vertex.hpp  constants.hpp  mat4.hpp  transform.hpp  vec3.hpp  vec4.hpp  vertex.hpp
inc/Engine/: callbacks.hpp  camera.hpp  engine.hpp  engine_controls.hpp  factory.hpp  generator.hpp  init.hpp  model.hpp  render.hpp  scene.hpp  shaderManager.hpp  shaders.hpp  texture.hpp  vaoManager.hpp
inc/Util/: files.hpp  parser.hpp
src/: main.cpp
src/Core/: Mat4.cpp  Vec3.cpp  mat4.cpp  vec3.cpp  vec4.cpp
src/Engine/: callbacks.cpp  camera.cpp  camera_controls.cpp  engine.cpp  engine_controls.cpp  engine_init.cpp  engine_models.cpp  engine_render.cpp  engine_run.cpp  engine_scene.cpp  factory.cpp  generator.cpp  init.cpp  model.cpp  render.cpp  scene.cpp  shader.cpp  shaderManager.cpp  shaders.cpp  texture.cpp  vaoManager.cpp
src/Util/: files.cpp  glad.c  parser.cpp
